[gd_scene load_steps=11 format=3 uid="uid://kdcuq367mn0g"]

[ext_resource type="Script" path="res://game/actors/characters/generic_characters/opponent_template/opponent.gd" id="1_2tgal"]
[ext_resource type="Script" path="res://game/components/drop_loot/drop_loot.gd" id="6_d5kp8"]
[ext_resource type="Script" path="res://game/components/health_system/health_system.gd" id="6_v082e"]
[ext_resource type="Script" path="res://game/components/movement_system/movement_system.gd" id="7_8xn5x"]
[ext_resource type="Script" path="res://game/components/attack/attack.gd" id="7_41gm8"]
[ext_resource type="Script" path="res://game/components/character/is_opponent.gd" id="8_6tv1y"]
[ext_resource type="Script" path="res://game/components/paint_red/paint_red.gd" id="9_5c288"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y3n38"]
size = Vector3(1, 1.5, 1)

[sub_resource type="Animation" id="Animation_udyfn"]
resource_name = "ded"
length = 4.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3jmyr"]
_data = {
"ded": SubResource("Animation_udyfn")
}

[node name="opponent" type="CharacterBody3D" groups=["opponents"]]
script = ExtResource("1_2tgal")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.013, 0.811, 0)
shape = SubResource("BoxShape3D_y3n38")

[node name="idle" type="Node3D" parent="."]

[node name="walk" type="Node3D" parent="."]

[node name="attack" type="Node3D" parent="."]

[node name="death" type="Node3D" parent="."]

[node name="queue_free_timer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3jmyr")
}

[node name="aim_ray" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23031, -0.857908)
target_position = Vector3(0, 0, -1)

[node name="attack_timer" type="Timer" parent="."]

[node name="health_system" type="Node" parent="."]
script = ExtResource("6_v082e")

[node name="movement_system" type="Node" parent="."]
script = ExtResource("7_8xn5x")
SPEED = 1.0

[node name="is_opponent" type="Node" parent="."]
script = ExtResource("8_6tv1y")

[node name="paint_red" type="Node" parent="."]
script = ExtResource("9_5c288")
red_material_path = "res://game/actors/characters/generic_characters/opponent_template/opponent_material_red.tres"

[node name="drop_loot" type="Node" parent="."]
script = ExtResource("6_d5kp8")

[node name="attack_logic" type="Node" parent="."]
script = ExtResource("7_41gm8")

[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="health_depleted" from="health_system" to="." method="_on_health_system_health_depleted"]
